# bookbundler

./: LICENSE  README.md  pyproject.toml
src/bookbundler/: cli.py  display.py  models.py  optimizer.py  scraper.py
tests/: test_optimizer.py
