[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookbundler"
version = "0.1.0"
description = "중고책 배송비 최적화 CLI 도구"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "PuLP>=2.8",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
bookbundler = "bookbundler.cli:main"
